--- a/upload/Dockerfile
+++ b/upload/Dockerfile
@@ -8,7 +8,7 @@ RUN npm install
 
 COPY upload_pinata.js ./upload_pinata.js
 
-ARG DATA
-COPY $DATA ./$DATA
+# ARG DATA
+# COPY $DATA ./$DATA
 
 CMD ["node", "upload_pinata.js"]
