--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -14,7 +14,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.487.0",
-    "nuxt": "^3.16.2",
     "reka-ui": "^2.2.0",
     "shadcn-nuxt": "^2.0.0",
     "tailwind-merge": "^3.2.0",
@@ -22,5 +21,8 @@
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "nuxt": "^3.16.2"
   }
 }
