truffle stuff commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,8 @@ services:
     build:
       context: ./truffle
     network_mode: host
+    environment:
+      PRIVATE_KEY: ${PRIVATE_KEY:-null}
+      ALCHEMY_KEY: ${ALCHEMY_KEY:-null}
+      VRF_SUBSCRIPTION_ID: ${VRF_SUBSCRIPTION_ID:-null}
+      ETHERSCAN_API_KEY: ${ETHERSCAN_API_KEY:-null}
