--- a/truffle/package.json
+++ b/truffle/package.json
@@ -14,5 +14,9 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.5.0",
     "truffle": "^5.11.5"
+  },
+  "devDependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.21.0",
+    "truffle-plugin-verify": "^0.6.7"
   }
 }
