sito work in progress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     volumes:
       - ./infUnigeNFT:/app
     network_mode: host
+    environment:
+     PROXY_ADDRESS: ${PROXY_ADDRESS:-null}
 
   deploy-contract:
     build:
