--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
     "lucide-vue-next": "^0.487.0",
     "reka-ui": "^2.2.0",
     "shadcn-nuxt": "^2.0.0",
