--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
