--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -22,7 +22,8 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
