--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,13 @@ services:
 
   frontend:
     build:
+      dockerfile: Dockerfile
       context: ./infUnigeNFT
     volumes:
       - ./infUnigeNFT:/app
     network_mode: host
     environment:
-     PROXY_ADDRESS: ${PROXY_ADDRESS:-null}
+      PROXY_ADDRESS: ${PROXY_ADDRESS:-null}
 
   deploy-contract:
     build:
@@ -34,3 +35,20 @@ services:
       PRIVATE_KEY: ${PRIVATE_KEY:-null}
       ALCHEMY_KEY: ${ALCHEMY_KEY:-null}
       ETHERSCAN_API_KEY: ${ETHERSCAN_API_KEY:-null}
+
+  build-frontend:
+    build:
+      dockerfile: ./deploy.Dockerfile
+      context: ./infUnigeNFT
+    network_mode: host
+    volumes:
+      - ./infUnigeNFT/.output:/app/.output
+    environment:
+      PROXY_ADDRESS: ${PROXY_ADDRESS:-null}
+
+  copy-output:
+    image: busybox
+    depends_on:
+      - build-frontend
+    volumes:
+      - ./infUnigeNFT/.output:/output
