--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -23,7 +23,8 @@
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-sonner": "^1.3.2"
+    "vue-sonner": "^1.3.2",
+    "nuxt": "^3.16.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
