--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
       # Pick your own package manager and build script
       - run: cd ./infUnigeNFT
       - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: npx nuxi build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
