--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/kit": "^3.17.1",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.1.0",
@@ -17,14 +18,14 @@
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "lucide-vue-next": "^0.487.0",
+    "nuxt": "^3.16.2",
     "reka-ui": "^2.2.0",
     "shadcn-nuxt": "^2.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-sonner": "^1.3.2",
-    "nuxt": "^3.16.2"
+    "vue-sonner": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
