--- a/infUnigeNFT/package.json
+++ b/infUnigeNFT/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/bridge": "^3.4.0",
     "@nuxt/kit": "^3.17.1",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.3",
