modificato il trigger del workflow di deploy per attivarsi su modifiche nella cartella infUnigeNFT

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Build & Deploy Nuxt site
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - "infUnigeNFT/**"
   workflow_dispatch:
 
 jobs:
