modificato il baseURL in nuxt.config.ts per il deploy su GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,11 @@ jobs:
         working-directory: infUnigeNFT
         run: npm ci
 
+      - name: Patch baseURL for GitHub Pages
+        working-directory: infUnigeNFT
+        run: |
+          sed -i 's|baseURL: .*$|baseURL: "/NFT-Unigecard/",|' nuxt.config.ts
+
       - name: Generate static site
         working-directory: infUnigeNFT
         run: npx nuxi generate
