--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Generate static site
         working-directory: infUnigeNFT
         run: npx nuxi generate
+        env:
+          PROXY_ADDRESS: 0xA13d9d004ECC11740006dEFFc9C20Ee9cEa61353
 
       - name: Copy generated files to dist
         run: |
